.ci-out_smoke_v1_log_verbose_3.txt
[FAIL(1)] zz-scripts/chapter07/plot_fig04_dcs2_vs_k.py  ( 0.0s)
  File "/home/jplal/MCGT/zz-scripts/chapter07/plot_fig04_dcs2_vs_k.py", line 27
    .ArgumentParser(
    ^
SyntaxError: invalid syntax
--------------------------------------------------------------------------------
[FAIL(1)] zz-scripts/chapter10/plot_fig05_hist_cdf_metrics.py  ( 0.0s)
  File "/home/jplal/MCGT/zz-scripts/chapter10/plot_fig05_hist_cdf_metrics.py", line 27
    .ArgumentParser(
    ^
SyntaxError: invalid syntax
--------------------------------------------------------------------------------
[FAIL(1)] zz-scripts/chapter04/plot_fig02_invariants_histogram.py  ( 0.0s)
  File "/home/jplal/MCGT/zz-scripts/chapter04/plot_fig02_invariants_histogram.py", line 12
    _p = argparse.ArgumentParser(
IndentationError: unexpected indent
--------------------------------------------------------------------------------
[FAIL(1)] zz-scripts/chapter03/plot_fig01_fR_stability_domain.py  ( 0.0s)
  File "/home/jplal/MCGT/zz-scripts/chapter03/plot_fig01_fR_stability_domain.py", line 15
    args = p.parse_args()
           ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
--------------------------------------------------------------------------------
